# MtoB

./: .gitignore  CMakeLists.txt  README.md
demo/: torus.ma
include/: Adapter.hpp  MayaLoader.hpp  MayaUtils.hpp  MtoB.hpp  RenderGlobalsData.hpp
include/adapters/: Mesh.hpp  PointLight.hpp
include/nodes/: RenderGlobals.hpp
scripts/bounceRenderer/: __init__.py  register.py  render_globals.py
src/: Adapter.cpp  MayaLoader.cpp  MayaUtils.cpp  MtoB.cpp  RenderGlobalsData.cpp  plugin.cpp
src/adapters/: Mesh.cpp  PointLight.cpp
src/nodes/: RenderGlobals.cpp
